codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugin_detail_popup_installed.snap
---
source: tui/src/chatwidget/tests.rs
expression: strip_osc8_for_snapshot(&popup)
---
  Plugins
  Figma · Installed · ChatGPT Marketplace
  Turn Figma files into implementation context.

❯ 1. Back to plugins   Return to the plugin list.
  2. Uninstall plugin  Remove this plugin now.
     Skills            design-review, extract-copy
     Apps              Figma, Slack
     MCP Servers       figma-mcp, docs-mcp

  Press esc to close.
