codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plugins_popup_loading_state.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Plugins
  Loading available plugins...
  This first pass shows the ChatGPT marketplace only.

❯    Loading plugins...  This updates when the marketplace list is ready.
