codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"❯ Ask Codex to do anything                                                      "
"────────────────────────────────────────────────────────────────────────────────"
"   GPT 5.3 Codex │ 󰉋 tui │  - · - tokens                                      "
"  Fast on                                                                       "
