codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"────────────────────────────────────────────────────────────────────────────────"
"❯ Ask Codex to do anything                                                      "
"────────────────────────────────────────────────────────────────────────────────"
"   GPT 5.4 ·xhi │ 󰉋 project │  - · - tokens                                   "
"  gpt-5.4 xhigh fast · 100% left · /tmp/project                                 "
